--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               I love learning new things</p>
             </div>
             <div>
-              <div class="title">SILLS : </div>
+              <div class="title">SKILLS : </div>
               <hr class="clear">
               <div class="skill">
                 <P class="disc">Technical fields those I worked...</P>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="BSc hsc">
                 <h1 class="sub">HSC in Science </h1>
-                  <h2 class="inst">Board of Secondary Education, Dhaka</h2>
+                  <h2 class="inst">Board of Higher Secondary Education, Dhaka</h2>
                   <p class="disc">2017-2019</p>
                 </div>
                 <br>
