--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           <a href="#skill">Skills</a>
           <a href="#education">Education</a>
           <a href="#contact">Contact</a>
-          <a herf="#" class="cls_btn" id="close" onclick="closemenu()">&times;close menue</a>
+          <a herf="#" class="cls_btn" id="close" onclick="closemenu()">&times;</a>
         </div>
         
         <div class="content">
-            <button class="btn" onclick="openMenu()" >&#9776; OPEN MENU</button>
+            <button class="btn" onclick="openMenu()" >&#9776;MENU</button>
             <br>
 
           <div class="main">
