--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             
           </div>
           <div class="gitLink">
-            <P class="link">If you want to see the source code of this website yot can see this from <span><a href="https://github.com/Nuruzzaman09/web">here</a></span></P>
+            <P class="link">If you want to see the source code of this website , you can see this from <span><a href="https://github.com/Nuruzzaman09/web">here</a></span></P>
           </div>
 
           <div class="footer">
