--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <p class="disc">Hello <br> <br>I am currently looking for a intern opportunity. Having skills in web application 
                  as i want to find a job and highly interested in web development as well as Software development. <br> <br>
                  I am willing to work for an organization which provides me the opportunity to improve my skills 
-                 and knowledge to growth along with the organization objective. <br> <br> 
+                 and knowledge to grow along with the organization objective. <br> <br> 
               Learning new things is one of my hobby. </p>
             </div>
             <div>
