--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   </div>
                   <div class="BSc hsc">
                   <h1 class="sub">HSC in Science </h1>
-                    <h2 class="inst">Board of Secondary Education, Dhaka</h2>
+                    <h2 class="inst">Board of Higher Secondary Education, Dhaka</h2>
                     <p class="disc">2017-2019</p>
                   </div>
                 </div>
