some spalling mistakes get correction
skill word was written like sill. now this is ok

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               Learning new things is one of my hobby. </p>
             </div>
             <div>
-              <div class="title" id="skill">SILLS : </div>
+              <div class="title" id="skill">SKILLS : </div>
               <hr class="clear">
               <div class="skill">
                 <P class="disc">Technical fields those I worked...</P>
