--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="img"><img src="img.jpg" alt="profile-pic"></div>
             <h1 class="name">NURUZZAMAN</h1>
           </div>
-          <a href="#home" onclick="closemenu()">Home</a>
-          <a href="#skill" onclick="closemenu()">Skills</a>
-          <a href="#education" onclick="closemenu()">Education</a>
-          <a href="#contact" onclick="closemenu()" >Contact</a>
+          <a href="#home">Home</a>
+          <a href="#skill" >Skills</a>
+          <a href="#education">Education</a>
+          <a href="#contact"  >Contact</a>
           <a herf="#" class="cls_btn" id="close" onclick="closemenu()">&times;</a>
         </div>
         
